gc tunning as a technique to boost app performance